consolidation of Notification